--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
     "axios": "0.24.0",
-    "next": "12.0.8",
+    "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "zustand": "3.6.9"
