--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/styled": "11.6.0",
     "axios": "0.24.0",
     "next": "^12.0.8",
+    "postcss": "^8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "zustand": "3.6.9"
