--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material/card": "^13.0.0",
+    "@mui/icons-material": "^5.4.1",
     "axios": "0.24.0",
     "next": "^12.0.8",
     "postcss": "^8.4.6",
