--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "dependencies": {
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@material/card": "^13.0.0",
     "@mui/icons-material": "^5.4.1",
+    "@mui/material": "5.4.2",
     "axios": "0.24.0",
+    "lodash": "^4.17.21",
     "next": "^12.0.8",
     "postcss": "^8.4.6",
     "react": "17.0.2",
