--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "5.4.2",
     "axios": "0.24.0",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "lodash": "^4.17.21",
     "next": "^12.0.8",
     "postcss": "^8.4.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "zustand": "3.6.9"
   },
   "devDependencies": {
